--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <section>
             <button id="funButton">Click Me for Fun!</button>
             <p id="funText"></p>
+
+            <script> document.write("this is javascript <br>")
+            console.log("Hello")
+            document.write(1+1)
+            </script>
+        
         </section>
     </main>
     <footer>
